--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sparticuz/chromium-min": "^123.0.0",
     "next": "^16.0.0",
     "puppeteer": "^24.37.1",
     "puppeteer-core": "^21.0.0",
@@ -21,5 +20,8 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "typescript": "^5.0.0"
+  },
+  "optionalDependencies": {
+    "@sparticuz/chromium": "^143.0.4"
   }
 }
